Mejorando interfaz grafica con swing en el package web